--- a/S20/ghpages/_config.yml
+++ b/S20/ghpages/_config.yml
@@ -17,6 +17,10 @@ url: http://shot.holycross.edu/courses/ada/S20/
 links:
   - title: Home
     url: /
+  - title: Schedule
+    url: /schedule
+  - title: Software
+    url: /software          
   - title: Instructor
     url: http://neelsmith.info/holycross/contact/
     external: true
