Add initial content

--- a/S20/ada.yaml
+++ b/S20/ada.yaml
@@ -16,8 +16,10 @@ fixedDates:
   - 2020-05-05 == Exams begin
   - 2020-04-21 == Academic conference on Wednesday
   - 2020-01-30 == [Module 1](../projects/module1) due on Friday
-  - 2020-02-18 == [Module 2](../projects/module2) due on Monday
+  - 2020-02-11 == [Module 2](../projects/module2) due on Monday, Feb. 17
   - 2020-02-27 == Module 3 due on Friday
   - 2020-03-19 == Module 4 due on Friday
+  - 2020-04-02 == Module 5 due on Friday
   - 2020-04-07 == Tuesday, last day to submit revisions of modules 1-4.
   - 2020-04-09 == Thursday, Easter break.
+  - 2020-04-30 == NB! Last day to submit final projects is Wed., May 6.
