Placeholders for labs and oral presentations

--- a/S20/ada.yaml
+++ b/S20/ada.yaml
@@ -15,8 +15,8 @@ fixedDates:
   - 2020-03-05 == Spring break
   - 2020-05-05 == Exams begin
   - 2020-04-21 == Academic conference on Wednesday
-  - 2020-01-30 == [Module 1](../projects/module1) due on Friday
-  - 2020-02-11 == [Module 2](../projects/module2) due on Monday, Feb. 17
+  - 2020-01-30 == [Module 1](../labs/module1) due on Friday
+  - 2020-02-11 == [Module 2](../labs/module2) due on Monday, Feb. 17
   - 2020-02-27 == Module 3 due on Friday
   - 2020-03-19 == Module 4 due on Friday
   - 2020-04-02 == Module 5 due on Friday
